[package]
name = "sod-log"
version = "0.2.2"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Eric Thill"]
repository = "https://github.com/thill/sod-log"
description = "Service Oriented Design - Log Integrations"
keywords = ["service", "pattern"]
categories = ["rust-patterns"]
exclude = ["Cargo.lock"]

[dependencies]
log = "0.4.17"
sod = "0.2.1"
